remove header location, controllers return response entity, use lombok, remove notempty,notnull and ojdbc8 dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:OraDoc
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:OraDoc
+#spring.datasource.username=webapp
+#spring.datasource.password=webapp
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+# H2 DB
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:memWebApp;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=webapp
-spring.datasource.password=webapp
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
+
